--- a/AoE2.netDesktop/AoE2.netDesktop.csproj
+++ b/AoE2.netDesktop/AoE2.netDesktop.csproj
@@ -8,12 +8,12 @@
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AssemblyVersion>0.0.0.1</AssemblyVersion>
     <FileVersion>0.0.0.1</FileVersion>
-    <Version>0.0.0</Version>
+    <Version>0.0.1</Version>
     <RepositoryType>git</RepositoryType>
     <PackageProjectUrl>https://github.com/teshiba/AoE2.netDesktop</PackageProjectUrl>
     <RepositoryUrl>https://github.com/teshiba/AoE2.netDesktop.git</RepositoryUrl>
     <PackageTags>AoE2DE</PackageTags>
-    <Company />
+    <Company>AoE2NetDesktop</Company>
     <Authors>Satoshi Teshiba</Authors>
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
