--- a/AoE2.netDesktop/AoE2.netDesktop.csproj
+++ b/AoE2.netDesktop/AoE2.netDesktop.csproj
@@ -20,6 +20,7 @@
     <RootNamespace>AoE2NetDesktop</RootNamespace>
     <AssemblyName>AoE2NetDesktop</AssemblyName>
     <PackageReleaseNotes>Version 0.0.1.beta2</PackageReleaseNotes>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -36,6 +37,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="5.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
