--- a/AoE2.netDesktop/Settings.settings
+++ b/AoE2.netDesktop/Settings.settings
@@ -11,11 +11,26 @@
     <Setting Name="SelectedIdType" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="WindowSize" Type="System.Drawing.Size" Scope="User">
+    <Setting Name="WindowSizeMain" Type="System.Drawing.Size" Scope="User">
       <Value Profile="(Default)">680, 310</Value>
     </Setting>
-    <Setting Name="WindowLocation" Type="System.Drawing.Point" Scope="User">
+    <Setting Name="WindowLocationMain" Type="System.Drawing.Point" Scope="User">
       <Value Profile="(Default)">0, 0</Value>
+    </Setting>
+    <Setting Name="WindowLocationHistory" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">0, 0</Value>
+    </Setting>
+    <Setting Name="WindowSizeHistory" Type="System.Drawing.Size" Scope="User">
+      <Value Profile="(Default)">1024, 640</Value>
+    </Setting>
+    <Setting Name="SelectedIndexTabControlHistory" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="SelectedIndexComboBoxLeaderboard" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="SelectedIndexComboBoxDataSource" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
