x-y axis of bar graph  can switch  now

--- a/AoE2.netDesktopTests/AoE2.netDesktopTests.csproj
+++ b/AoE2.netDesktopTests/AoE2.netDesktopTests.csproj
@@ -41,6 +41,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="ScottPlot" Version="4.1.21" />
+    <PackageReference Include="ScottPlot.WinForms" Version="4.1.21" />
   </ItemGroup>
 
   <ItemGroup>
