--- a/.editorconfig
+++ b/.editorconfig
@@ -135,7 +135,7 @@ csharp_new_line_before_else = false
 csharp_new_line_before_finally = false
 csharp_new_line_before_members_in_anonymous_types = true
 csharp_new_line_before_members_in_object_initializers = true
-csharp_new_line_before_open_brace = anonymous_methods,anonymous_types,lambdas,methods,object_collection_array_initializers,properties,types
+csharp_new_line_before_open_brace = anonymous_methods,lambdas,methods,properties,types
 csharp_new_line_between_query_expression_clauses = true
 
 # Indentation preferences
