--- a/AoE2.netDesktop/AoE2.netDesktop.csproj
+++ b/AoE2.netDesktop/AoE2.netDesktop.csproj
@@ -6,9 +6,9 @@
     <UseWindowsForms>true</UseWindowsForms>
     <StartupObject></StartupObject>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
-    <Version>0.1.0</Version>
+    <AssemblyVersion>0.2.0.0</AssemblyVersion>
+    <FileVersion>0.2.0.0</FileVersion>
+    <Version>0.2.0</Version>
     <RepositoryType>git</RepositoryType>
     <PackageProjectUrl>https://github.com/teshiba/AoE2.netDesktop</PackageProjectUrl>
     <RepositoryUrl>https://github.com/teshiba/AoE2.netDesktop.git</RepositoryUrl>
@@ -19,9 +19,11 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <RootNamespace>AoE2NetDesktop</RootNamespace>
     <AssemblyName>AoE2NetDesktop</AssemblyName>
-    <PackageReleaseNotes>Version 0.1.0</PackageReleaseNotes>
+    <PackageReleaseNotes>Version 0.2.0</PackageReleaseNotes>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <Configurations>Debug;Release</Configurations>
+    <Description>A desktop application that makes viewing "Age of Empires II: Definitive Edition" play history easily.</Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -40,6 +42,10 @@
     <Compile Remove="Properties\**" />
     <EmbeddedResource Remove="Properties\**" />
     <None Remove="Properties\**" />
+    <None Include="..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -73,10 +79,6 @@
     <None Update="Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <None Include="..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
     </None>
   </ItemGroup>
 
