refactor code and enable F5 key and Ctrl-a
    F5 key for Update button
    Ctrl-a for sellect all listitems in listviewStatistics

--- a/AoE2.netDesktop/AoE2.netDesktop.csproj
+++ b/AoE2.netDesktop/AoE2.netDesktop.csproj
@@ -24,6 +24,7 @@
     <Configurations>Debug;Release</Configurations>
     <Description>A desktop application that makes viewing "Age of Empires II: Definitive Edition" play history easily.</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
