--- a/AoE2.netDesktop/Settings.settings
+++ b/AoE2.netDesktop/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="SelectedIndexComboBoxDataSource" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="MainFormOpacityPercent" Type="System.Decimal" Scope="User">
+      <Value Profile="(Default)">100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
