--- a/AoE2.netDesktop/Settings.settings
+++ b/AoE2.netDesktop/Settings.settings
@@ -38,5 +38,20 @@
     <Setting Name="ChromaKey" Type="System.String" Scope="User">
       <Value Profile="(Default)">#708090</Value>
     </Setting>
+    <Setting Name="MainFormIsHideTitle" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="MainFormIsAlwaysOnTop" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="WindowSizeSettings" Type="System.Drawing.Size" Scope="User">
+      <Value Profile="(Default)">0, 0</Value>
+    </Setting>
+    <Setting Name="WindowLocationSettings" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">0, 0</Value>
+    </Setting>
+    <Setting Name="MainFormTransparency" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
