Auto-reload is only active if the aoe2de process is active.

--- a/AoE2.netDesktopTests/AoE2.netDesktopTests.csproj
+++ b/AoE2.netDesktopTests/AoE2.netDesktopTests.csproj
@@ -45,6 +45,10 @@
     <ProjectReference Include="..\AoE2.netDesktop\AoE2.netDesktop.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TestResults\" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
