--- a/AoE2.netDesktopTests/.editorconfig
+++ b/AoE2.netDesktopTests/.editorconfig
@@ -24,3 +24,6 @@ dotnet_diagnostic.SA1500.severity = none
 
 # SA1601: Partial elements should be documented
 dotnet_diagnostic.SA1601.severity = none
+
+# SA1000: Keywords should be spaced correctly
+dotnet_diagnostic.SA1000.severity = none
