--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -81,8 +81,11 @@ jobs:
     - name: Execute unit tests
       run: |
         dotnet test --collect:"XPlat Code Coverage" --filter "TestCategory!=GUI" -- RunConfiguration.TestSessionTimeout=60000 > test.log 2>&1
-        COVERAGE_RESULT=`cat test.log | grep coverage.cobertura.xml`
-        cat test.log
-        curl -s https://codecov.io/bash > codecov
-        chmod +x codecov
-        ./codecov -f $COVERAGE_RESULT
+        type test.log
+        type test.log | find "coverage.cobertura.xml" > coverageCoberturaPath.txt
+        for /f %%a in (coverageCoberturaPath.txt) do @set COVERAGE_RESULT=%%a&goto :exit_for
+        :exit_for
+        del coverageCoberturaPath.txt
+
+    - name: upload coverage
+      uses: codecov/codecov-action@v1
