--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -82,10 +82,11 @@ jobs:
       run: |
         dotnet test --collect:"XPlat Code Coverage" --filter "TestCategory!=GUI" -- RunConfiguration.TestSessionTimeout=60000 > test.log 2>&1
         type test.log
-        type test.log | find "coverage.cobertura.xml" > coverageCoberturaPath.txt
-        for (/f %%a in (coverageCoberturaPath.txt)){ @set COVERAGE_RESULT=%%a&goto :exit_for }
-        :exit_for
-        del coverageCoberturaPath.txt
+        $COVERAGE_RESULT = Select-String -Path .\test.log -Pattern "coverage.cobertura.xml"
+        $COVERAGE_RESULT = $COVERAGE_RESULT -replace "^.*\s+",""
 
     - name: upload coverage
       uses: codecov/codecov-action@v1
+      with:
+        files: $COVERAGE_RESULT
+        
