--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -80,8 +80,9 @@ jobs:
       run: |
         dotnet test --collect:"XPlat Code Coverage" --filter "TestCategory!=GUI" "--logger:Console;verbosity=detailed" -- RunConfiguration.TestSessionTimeout=120000 > test.log 2>&1
         type test.log
-        $COVERAGE_RESULT = Select-String -Path .\test.log -Pattern "coverage.cobertura.xml"
+        $COVERAGE_RESULT = Select-String -Path test.log -Pattern "coverage.cobertura.xml"
         $COVERAGE_RESULT = $COVERAGE_RESULT -replace "^.*\s+",""
+        echo $COVERAGE_RESULT
 
     - name: upload coverage
       uses: codecov/codecov-action@v1
