--- a/AoE2.netDesktop/Settings.settings
+++ b/AoE2.netDesktop/Settings.settings
@@ -32,8 +32,8 @@
     <Setting Name="SelectedIndexComboBoxDataSource" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="MainFormOpacityPercent" Type="System.Decimal" Scope="User">
-      <Value Profile="(Default)">100</Value>
+    <Setting Name="MainFormOpacityPercent" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="ChromaKey" Type="System.String" Scope="User">
       <Value Profile="(Default)">#708090</Value>
@@ -50,7 +50,7 @@
     <Setting Name="WindowLocationSettings" Type="System.Drawing.Point" Scope="User">
       <Value Profile="(Default)">0, 0</Value>
     </Setting>
-    <Setting Name="MainFormTransparency" Type="System.Boolean" Scope="User">
+    <Setting Name="MainFormIsTransparency" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DrawHighQuality" Type="System.Boolean" Scope="User">
