--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -87,3 +87,9 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         files: ${{ env.coverageResult }}
+        
+    - name: Upload coverage result as a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+        name: coverageResult
+        path: ./Coverage
