--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -40,21 +40,22 @@ name: .NET Core Desktop
 
 on:
   push:
-    branches: [ "develop" ]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+      - develop
+      - feature/**
 
 jobs:
-
   build:
-
     strategy:
       matrix:
         configuration: [Debug]
-
     runs-on: windows-latest # For a list of available runner types, refer to
                             # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
-
     env:
       Solution_Name: AoE2.netDesktop.sln                                  # Replace with your solution name, i.e. MyWpfApp.sln.
       Test_Project_Path: AoE2.netDesktopTests/AoE2.netDesktopTests.csproj # Replace with the path to your test project, i.e. MyWpfApp.Tests\MyWpfApp.Tests.csproj.
