--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -80,6 +80,7 @@ jobs:
     - name: Execute unit tests
       run: |
         dotnet test --collect:"XPlat Code Coverage" --filter "TestCategory!=GUI" "--logger:Console;verbosity=detailed" -- RunConfiguration.TestSessionTimeout=120000 > test.log 2>&1
+        type test.log
         $COVERAGE_RESULT = Select-String -Path test.log -Pattern "coverage.cobertura.xml"
         $COVERAGE_RESULT = $COVERAGE_RESULT -replace "^.*\s+",""
         echo COVERAGE output: $COVERAGE_RESULT
