--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -116,6 +116,10 @@ jobs:
         customSettings: '' # Optional custom settings (separated by semicolon). See: https://github.com/danielpalme/ReportGenerator/wiki/Settings.
         toolpath: 'reportgeneratortool' # Default directory for installing the dotnet tool.
 
+    - name: Make artifact package
+      run: |
+         copy test.log ./coveragereport/test.log
+
     - name: Upload coverage report artifact
       uses: actions/upload-artifact@v2.2.3
       with:
