--- a/AoE2.netDesktop/.editorconfig
+++ b/AoE2.netDesktop/.editorconfig
@@ -39,7 +39,7 @@ csharp_style_prefer_tuple_swap = true:suggestion
 csharp_style_inlined_variable_declaration = true:suggestion
 csharp_style_deconstructed_variable_declaration = true:suggestion
 csharp_style_unused_value_assignment_preference = discard_variable:suggestion
-csharp_style_unused_value_expression_statement_preference = discard_variable:silent
+csharp_style_unused_value_expression_statement_preference = unused_local_variable:silent
 
 # SA1000: Keywords should be spaced correctly
 dotnet_diagnostic.SA1000.severity = none
