--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -93,18 +93,13 @@ jobs:
       run: |
          Select-String "failed" "test.log" -Context 0,5
 
-    - name: upload coverage
-      uses: codecov/codecov-action@v1
-      with:
-        files: ./coverage.cobertura.xml
-    
     # Execute ReportGenerator
     - name: ReportGenerator
       uses: danielpalme/ReportGenerator-GitHub-Action@5.1.9
       with:
         reports: 'coverage.cobertura.xml' # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
         targetdir: 'coveragereport' # REQUIRED # The directory where the generated report should be saved.
-        reporttypes: 'HtmlInline;Cobertura' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, Html_Dark, Html_Light, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlInline_AzurePipelines_Light, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
+        reporttypes: 'HtmlInline;Cobertura;MarkdownSummaryGithub' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, Html_Dark, Html_Light, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlInline_AzurePipelines_Light, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MarkdownSummary, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
         sourcedirs: '' # Optional directories which contain the corresponding source code (separated by semicolon). The source directories are used if coverage report contains classes without path information.
         historydir: 'coveragereport/History' # Optional directory for storing persistent coverage information. Can be used in future reports to show coverage evolution.
         plugins: '' # Optional plugin files for custom reports or custom history storage (separated by semicolon).
@@ -121,6 +116,7 @@ jobs:
     - name: Make artifact package
       run: |
          copy test.log ./coveragereport/test.log
+         type ./coveragereport/SummaryGithub.md > $GITHUB_STEP_SUMMARY
 
     - name: Upload coverage report artifact
       uses: actions/upload-artifact@v2.2.3
